[gd_scene load_steps=4 format=3 uid="uid://cxcbwe75rlvtm"]

[ext_resource type="Texture2D" uid="uid://dctqf26ol1jsw" path="res://Assets/Box Chute.png" id="1_0u0nu"]
[ext_resource type="Script" path="res://Main/Factory/Machines/BoxCute/BoxChute.gd" id="1_kawe6"]

[sub_resource type="Curve2D" id="Curve2D_ywiil"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 80, 32, 0, 0, 0, 0, -88, 32)
}
point_count = 2

[node name="BoxChute" type="Node2D"]
z_index = 1
script = ExtResource("1_kawe6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0u0nu")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ywiil")

[node name="SpawnPathFollower" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(80, 32)
rotation = 3.14159

[node name="SpawnPoint" type="Marker2D" parent="SpawnPath/SpawnPathFollower"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
